<resources>
    <string name="app_name">叮叮</string>
    <string name="action_settings">Settings</string>
    <string name="string_lijun">lijun test .</string>
    <string name="search">搜索</string>

    <string name="index_btns_01">App预订</string>
    <string name="index_btns_02">备货中</string>
    <string name="index_btns_03">备货完成</string>
    <string name="index_btns_04">采购路线</string>
    <string name="index_btns_05">市场采购</string>
    <string name="index_btns_06">配送分店</string>


    <string name="section_format">分店 %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
